Tests/ShouldSucceed/FactuurConcat0a.adl
CONTEXT Factuur IN ENGLISH

factuurRegel :: Factuur * Regel
regelText :: Regel * TEXT [UNI]
factuurOK :: Factuur * Factuur [PROP]

RULE "Factuur controle": factuurOK = I[Factuur] /\ -(factuurRegel;-((I /\ regelText;regelText~);factuurRegel))
MEANING "Definitie: een factuur is ok DESDA de factuur is leeg, of elk van zijn regels bevat een text."

f :: Factuur * Factuur -- relatie om Facturen te kunnen maken zonder regels of texten
POPULATION f            CONTAINS [ ("Factuur1", "Factuur1") ]
-- Als een atoom van het type TEXT niet bestaat, kan factuurOK ook niet bestaan.
--POPULATION factuurOK    CONTAINS [ ("Factuur1", "Factuur1") ] -- Een factuur zonder regels is ook OK

ENDCONTEXT