Tests/ShouldFail/FactERRDagger0.adl
CONTEXT Factuur IN ENGLISH

factuurRegel :: Factuur * Regel
regelText :: Regel * TEXT [UNI] =[ ("R is een Regel", "R is een text") ] -- Voorkomt rare uitkomsten als er geen TEXT-atoom is.
factuurOK :: Factuur * Factuur [PROP]

RULE "Factuur controle": factuurOK = I[Factuur] /\ (-factuurRegel!regelText);V
MEANING "Definitie: een factuur is ok DESDA de factuur is leeg, of elk van zijn regels bevat een text."

f :: Factuur * Factuur -- relatie om Facturen te kunnen maken zonder regels of texten
POPULATION f            CONTAINS [ ("Factuur1", "Factuur1") ]
--Als een atoom van het type TEXT wel bestaat, kan factuurOK wel bestaan.
--POPULATION factuurOK    CONTAINS [ ("Factuur1", "Factuur1") ] -- Een factuur zonder regels is ook OK

ENDCONTEXT